# music-lyrics-tagger

./: .enc.env  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  Pipfile  README.md  main.py  pyproject.toml  renovate.json  run.bat
music_lyrics_tagger/: cli.py  main.py
music_lyrics_tagger/core/: __init__.py  lyrics.py  tag.py  utils.py
music_lyrics_tagger/utils/: io.py  log.py  lyrics.py
src/utils/: io.py  lyrics.py
tests/: test_music_lyrics_tagger.py
